kube/first-reapers-summons-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: first-reapers-summons-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - summons.reapers.cash
    secretName: first-reapers-summons-tls
  defaultBackend:
    service:
      name: first-reapers-summons
      port:
        number: 290
  rules:
  - host: summons.reapers.cash
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: first-reapers-summons
            port:
              number: 290
